# client

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  README.md  TODO.md  docker-compose.yml  docker-runner.sh  pyproject.toml
.github/workflows/: test.yml
earthmind/: cli.py
earthmind/miner/: miner.py
poetry_demo/: cli.py  cli_v2.py
tests/: test_sample.py
tests/integration_tests/: test_1.py
tests/unit_tests/: test_sample.py
