[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["edsonalcala <edson_alcala@msn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
polars = "^0.20.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
