[tool.poetry]
name = "earthmind"
version = "0.1.0"
description = ""
authors = ["EarthMind Team <admin@earthmind.tech>"]
readme = "README.md"
packages = [{ include = "earthmind" }]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
polars = "^0.20.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
